--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <div id="app" class="app">
- <div class="picture">1</div>
- <div class="picture">2</div> 
- <div class="picture">3</div> 
- <div class="picture">4</div> 
- <div class="picture">5</div> 
+  
+ <div class="picture">1<div class="pin"></div></div>
+ <div class="picture">2<div class="pin"></div></div> 
+ <div class="picture">3<div class="pin"></div></div> 
+ <div class="picture">4<div class="pin"></div></div> 
+ <div class="picture">5<div class="pin"></div></div> 
 </div>
