--- a/index.html
+++ b/index.html
@@ -1,8 +1,74 @@
 <div id="app" class="app">
-  
- <div class="picture">1<div class="pin"></div></div>
- <div class="picture">2<div class="pin"></div></div> 
- <div class="picture">3<div class="pin"></div></div> 
- <div class="picture">4<div class="pin"></div></div> 
- <div class="picture">5<div class="pin"></div></div> 
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419094/annieandadam/IMG-20181028-WA0011.jpg"
+                alt="Squirrel ">
+            <div class="footer-label">Squirrel </div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419094/annieandadam/IMG-20180917-WA0108.jpg"
+                alt="Night time in Malta">
+            <div class="footer-label">Night time in Malta</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419094/annieandadam/IMG-20180917-WA0079.jpg"
+                alt="Our balcony view">
+            <div class="footer-label">Our balcony view</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419093/annieandadam/IMG-20180917-WA0025.jpg"
+                alt="Exploring">
+            <div class="footer-label">Exploring</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419093/annieandadam/IMG_20190101_141314.jpg"
+                alt="Home town">
+            <div class="footer-label">Home town</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419093/annieandadam/IMG_20181101_201544.jpg"
+                alt="Bubbles">
+            <div class="footer-label">Bubbles</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419093/annieandadam/IMG_20181009_184208.jpg"
+                alt="Seaside fun">
+            <div class="footer-label">Seaside fun</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419095/annieandadam/IMG_20180419_193643.jpg"
+                alt="Amsterdam">
+            <div class="footer-label">Amsterdam</div>
+        </div>
+    </div>
+    <div class="picture">
+        <div class="pic-inner">
+            <div class="pin"></div>
+            <img src="https://res.cloudinary.com/lazydayed/image/upload/v1553419096/annieandadam/DSCN2430.jpg"
+                alt="The moon">
+            <div class="footer-label">The moon</div>
+        </div>
+    </div>
 </div>
